--- a/index.html
+++ b/index.html
@@ -7,30 +7,26 @@
   "symbols": [
     {
       "proName": "FOREXCOM:SPXUSD",
-      "title": "S&P 500 Index"
-    },
-    {
-      "proName": "FOREXCOM:NSXUSD",
-      "title": "US 100 Cash CFD"
+      "title": ""
     },
     {
       "proName": "FX_IDC:EURUSD",
-      "title": "EUR to USD"
+      "title": ""
     },
     {
       "proName": "BITSTAMP:BTCUSD",
-      "title": "Bitcoin"
+      "title": ""
     },
     {
       "proName": "BITSTAMP:ETHUSD",
-      "title": "Ethereum"
+      "title": ""
     }
   ],
   "colorTheme": "dark",
   "locale": "en",
   "largeChartUrl": "",
-  "isTransparent": false,
-  "showSymbolLogo": true,
+  "isTransparent": true,
+  "showSymbolLogo": false,
   "displayMode": "adaptive"
 }
   </script>
